<resources>
    <string name="app_name">ピンイン耳トレ</string>
    <string name="title_home">ピンイン耳トレ</string>
    <string name="high_score_format">最高スコア %d点</string>
    <string name="weak_word_count_format">苦手単語: %d語</string>
    <string name="ranking_title">ランキング</string>
    <string name="label_hsk_level">HSKレベル:</string>
    <string name="label_questions_count">問題数:</string>
    <string name="label_options_count">選択肢数:</string>
    <string name="label_sound_enabled">効果音</string>
    <string name="btn_start">START</string>

    <string-array name="hsk_level_options">
        <item>HSK1</item>
        <item>HSK2</item>
        <item>HSK3</item>
        <item>HSK4</item>
        <item>HSK5</item>
        <item>HSK6</item>
    </string-array>

    <string-array name="questions_count_options">
        <item>10問</item>
        <item>20問</item>
        <item>50問</item>
    </string-array>

    <string-array name="options_count_options">
        <item>3択</item>
        <item>5択</item>
    </string-array>

    <string name="ranking_empty">まだ記録がありません</string>

    <string name="quiz_progress_format">問題 %1$d / %2$d</string>
    <string name="btn_play_audio">🔊 再生</string>
    <string name="quiz_instruction">音声を聞いて正しいピンインを選んでください</string>
    <string name="toast_selected_format">選択: %s</string>

    <string name="answer_correct">正解！</string>
    <string name="answer_incorrect">不正解</string>
    <string name="answer_correct_pinyin_format">正解: %s</string>
    <string name="btn_next">次へ</string>
    <string name="answer_user_format">あなたの回答: %s</string>
    <string name="btn_review_weak_words">苦手単語復習</string>
    <string name="btn_weak_words_list">苦手単語一覧</string>
    <string name="title_weak_words">苦手単語一覧</string>
    <string name="label_mistake_count">間違い回数: %d</string>
    <string name="toast_no_weak_words">苦手単語はありません</string>
    <string name="quiz_mode_review">(復習)</string>

    <string name="result_title">お疲れ様でした！</string>
    <string name="result_correct_count_format">正解数: %1$d / %2$d</string>
    <string name="result_accuracy_format">正答率: %d%%</string>
    <string name="result_score_format">スコア: %d点</string>
    <string name="result_review_note">復習モードの結果はランキングに保存されません</string>
    <string name="btn_go_home">ホームへ戻る</string>
</resources>